Chanfing the title

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 h1{
-    color:red;
+    color:black;
 }
 
 body{
 
-    background-color: aquamarine;
-    background-color: aliceblue;
+    background-color: rgb(212, 255, 127);
+    
 }
